--- a/app/src/main/res/layout/fragment_class_room.xml
+++ b/app/src/main/res/layout/fragment_class_room.xml
@@ -45,22 +45,31 @@
             android:background="@drawable/rounded_blue3"
             android:src="@drawable/baseline_filter_alt_24" />
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/frame_layout_joined_class"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"/>
-    <FrameLayout
-        android:id="@+id/frame_layout_all_class"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/recyclerViewSearch"
-        android:visibility="gone"
-        />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <FrameLayout
+                android:id="@+id/frame_layout_joined_class"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp" />
+
+            <FrameLayout
+                android:id="@+id/frame_layout_all_class"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewSearch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
