--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -20,14 +20,16 @@
             android:hint="Tìm kiếm từ ở đây"
             android:padding="12dp" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSearch"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
             android:text="Tìm kếm"
-            android:textSize="18sp" />
+            android:textSize="18dp"
+            android:textColor="@color/white"
+            android:background="@drawable/rounded_blue2"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -55,6 +57,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/black"
         tools:text="/t e s t/"
+        android:textSize="18dp"
         android:layout_marginVertical="5dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
